--- a/wikia.template
+++ b/wikia.template
@@ -1,10 +1,11 @@
-All details on this page were correct on {{today | date}}. Any changes made since then (e.g., inactive leaders who have started logging in again) will NOT be represented in this page unless someone edits them in manually.
-guild
-The "relative time" dates (e.g., ''a day ago'' or ''4 months ago'') are all relative to the day you are looking on. They are intended to give a quick method of very roughly assessing the activity of a leader or guild.
+All details on this page were correct on '''{{today | date}}'''. Any changes made since then (e.g., inactive leaders who have started logging in again) will '''not''' be represented in this page unless someone edits them in manually.<br />
 
-This info was generated using [https://github.com/MathWhiz/abandoned-guilds abandoned-guilds] on {{today | date}}.<br />
-'''Note:''' All dates follow a YYYY-MM-DD format and all Unicode characters are converted to ASCII-like equivalents.
-----
+The "relative time" dates (e.g., ''a day ago'' or ''4 months ago'') are all relative to the day you are looking on. They are intended to give a quick method of very roughly assessing the activity of a leader or guild.<br />
+
+This info was generated using [https://github.com/MathWhiz/abandoned-guilds a Python script created by Accio Books!] on {{today | date}}.<br />
+'''Note:''' All dates follow a YYYY-mM-dD format and all Unicode characters are converted to ASCII-like equivalents. Guilds have been sorted by their guild IDs.
+
+__TOC__
 
 {{#guilds}}
 ==NOT STARTED: {{name}}==
@@ -14,7 +15,7 @@ This info was generated using [https://github.com/MathWhiz/abandoned-guilds aban
 * '''Group ID''': [https://habitica.com/#/options/groups/guilds/{{_id}} {{_id}}]
 * '''Members''': {{memberCount}}
 * '''Most Recent Chat''': {{chat.0.timestamp | date}}
-===Leader: {leader display name}===
+===Leader: {{leaderInfo.profile.name}}===
 * '''User ID''': [https://habitica.com/static/front#?memberId={{leader._id}} {{leader._id}}]
 * '''Created''': {{leaderInfo.auth.timestamps.created | date}}
 * '''Logged In''': {{leaderInfo.auth.timestamps.loggedin | date}}
