--- a/wikia.template
+++ b/wikia.template
@@ -1,9 +1,24 @@
-All details on this page were correct on '''{{today | date}}'''. Any changes made since then (e.g., inactive leaders who have started logging in again) will '''not''' be represented in this page unless someone edits them in manually.<br />
+{{Forumheader|The Armory}}
+
+{{Abandonedguildsheader}}
+
+All details on this page were correct on {{today | date}}. Any changes made since then (e.g., inactive leaders who have started logging in again) will '''not''' be represented in this page unless someone edits them in manually.<br />
 
 The "relative time" dates (e.g., ''a day ago'' or ''4 months ago'') are all relative to the day that section was last updated. They are intended to give a quick method of very roughly assessing the activity of a leader or guild.<br />
 
 This info was generated using [https://github.com/MathWhiz/abandoned-guilds a Python script created by Accio Books!] on {{today | date}}.<br />
 '''Note:''' All dates follow a YYYY-mM-dD format and all Unicode characters are converted to ASCII-like equivalents. Guilds have been sorted by their guild IDs.
+
+When updating the list please ensure the first part of the status (preferably in Upper case) is either
+* NOT STARTED
+* IN PROGRESS
+* FINISHED
+* LAST RITES
+This is so status can be collated easily. Please add more details in the Current Status area regarding the current action.
+
+<div align="center">
+https://pirate-cove-progress-chart.herokuapp.com/?i=.png
+</div>
 
 __TOC__
 
