Re-implement arguments with argparse

--- a/wikia.template
+++ b/wikia.template
@@ -1,6 +1,6 @@
-{{Forumheader|The Armory}}
+\{{Forumheader|The Armory}}
 
-{{Abandonedguildsheader}}
+\{{Abandonedguildsheader}}
 
 All details on this page were correct on {{today | date}}. Any changes made since then (e.g., inactive leaders who have started logging in again) will '''not''' be represented in this page unless someone edits them in manually.<br />
 
