--- a/wikia.template
+++ b/wikia.template
@@ -9,7 +9,7 @@ The "relative time" dates (e.g., ''a day ago'' or ''4 months ago'') are all rela
 This info was generated using [https://github.com/MathWhiz/abandoned-guilds a Python script created by Accio Books!] on {{today | date}}.<br />
 '''Note:''' All dates follow a YYYY-mM-dD format and all Unicode characters are converted to ASCII-like equivalents. Guilds have been sorted by their guild IDs.
 
-When updating the list please ensure the first part of the status (preferably in Upper case) is either
+When updating the list please ensure the first part of the status (preferably in ALL CAPSpp) is either
 * NOT STARTED
 * IN PROGRESS
 * FINISHED
@@ -25,8 +25,9 @@ __TOC__
 {{#guilds}}
 ==NOT STARTED: {{name}}==
 '''Pirate Assigned''': None<br />
-'''Current Status''': Not Started
-'''Proposed Decision''':
+'''Approved By''': <br />
+'''Current Status''': Not Started<br />
+'''Proposed Decision''': <br />
 '''Guild Information''':
 * Group ID: [https://habitica.com/#/options/groups/guilds/{{_id}} {{_id}}]
 * Members: {{memberCount}}
@@ -42,10 +43,12 @@ Description:<br />
 <blockquote>
 {{description}}
 </blockquote>
+
 Leader Message:<br />
 <blockquote>
 {{leaderMessage}}
 </blockquote>
+
 '''Pirate Discussion''':
 None
 ----
