--- a/wikia.template
+++ b/wikia.template
@@ -25,11 +25,13 @@ __TOC__
 {{#guilds}}
 ==NOT STARTED: {{name}}==
 '''Pirate Assigned''': None<br />
-'''Approved By''': N/A<br />
+'''Approved By''': None<br />
 '''Current Status''': Not Started<br />
 '''Proposed Decision''': N/A<br />
 '''Guild Information''':
 * Group ID: [https://habitica.com/groups/guilds/{{_id}} {{_id}}]
+* Markdown code:	[{{name}}](https://habitica.com/groups/guilds/{{_id}})
+* Guild Data Tool: [https://oldgods.net/habitica/cTheDragons/group.html?groupId=testid&hide_avatar=true&max=120000 (All members)]  [https://oldgods.net/habitica/cTheDragons/group.html?groupId=testid&hide_avatar=true&max=0 (Just Chat & Leader Details)]
 * Members: {{memberCount}}
 * Most Recent Chat Message: {{chat.1st | date}}
 * 5th Chat Message: {{chat.5th | date}}
